--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -17,7 +17,7 @@ main {
     flex:1 0 auto
 }
 #contactBox{
-    width: 100%;
+    width: 90%;
     text-align: center;
     background: gray;
     border: white 1px solid;
@@ -71,7 +71,7 @@ label{
     margin: 0px auto;
 }
 .Logo:hover{
-    color: #e5973b !important;
+    color: #4ec4f8 !important;
     -webkit-text-stroke: 3px #2b292a;
 }
 .pageContainer{
@@ -81,12 +81,96 @@ label{
 #ourContact{
     background: gray;
     width: fit-content;
-    padding: 5px;
+    padding: 15px;
     border: white 1px solid;
     border-radius: 25px;
     text-align: center;
-    margin: auto auto 50px auto
+    margin: auto auto 50px auto;
+    color: white
 }
+#ourContactText{
+    color: #4ec4f8;
+    font-family: 'Merienda', cursive;
+}
+.ourInfo{
+font-family: 'Alegreya Sans', cursive;
+letter-spacing: 1px
+}
+.ourInfo:hover{
+    color: #4ec4f8 !important;
+}
+.extrasBox{
+    background: gray;
+    width: fit-content;
+    padding: 15px;
+    border: white 1px solid;
+    border-radius: 25px;
+    text-align: center;
+    margin: auto auto 50px auto;
+    color: white
+}
+.extrasIco{
+    font-size: 40px !important;
+    background: white;
+    border: #4ec4f8 1px solid;
+    border-radius: 25px;
+    padding: 5px;
+}
+.extrasIco:hover{
+    background: #4ec4f8;
+    border: white 1px solid;
+    color: white;
+}
+.loadingGif{
+    width: 70%;
+    border-radius: 50%;
+}
+.returnHomeBox{
+    margin: -20px auto 20px auto;
+}
+.returnHome{
+    font-family: 'Merienda', cursive;
+    padding: 0px 10px;
+    color: #4ec4f8;
+}
+.returnHomeIco{
+    margin: 0px 10px;
+    font-size: 30px !important;
+
+}
+
+/* Style all font awesome icons */
+.fa {
+    padding: 10px;
+    font-size: 30px !important;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    margin: auto 10px
+  }
+  /* Facebook */
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  /* Twitter */
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  
+  /* Add a hover effect if you want */
+  .fa:hover {
+    opacity: 0.7;
+  }
+
+
+
+  .hidden{
+      display: none
+  }
 
 /* ============ FOOTER ============== */
 #footer{
