--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,9 +1,5 @@
 .bg {
-    /* The image used */
     background: url("../images/static/contact.jpg");
-    /* Full height */
-    /* height: 100%; */
-    /* Center and scale the image nicely */
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,6 +12,35 @@
 main {
     flex:1 0 auto
 }
+.pageContainer{
+    position: relative;
+    height: 100%;
+}
+.row{
+    margin: 0px !important;
+}
+
+
+
+
+/* === LOGO === */
+.logoDiv{
+    height: 300px
+}
+.Logo{
+    font-family: 'Righteous', cursive;
+    color: #2b292a;
+    -webkit-text-stroke: 2px #4ec4f8;
+    margin: 0px auto;
+}
+.Logo:hover{
+    color: #4ec4f8 !important;
+    -webkit-text-stroke: 3px #2b292a;
+}
+
+
+
+/* === CONTACT FORMS === */
 #contactBox{
     width: 90%;
     text-align: center;
@@ -29,16 +54,6 @@ main {
     margin: 20px auto 0px auto;
     color: #4ec4f8;
     font-family: 'Merienda', cursive;
-}
-#submitMessageBtn{
-    background: #4ec4f8;
-    border: white 1px solid;
-    color: white;
-}
-#submitMessageBtn:hover{
-    background: #ffffff;
-    border: #4ec4f8 1px solid;
-    color: #4ec4f8;
 }
 .prefix{
     color: #4ec4f8;
@@ -54,30 +69,24 @@ input, #messageBox{
     color: white;
     font-family: 'Alegreya Sans', cursive !important;
 }
-.row{
-    margin: 0px !important;
-}
 label{
     font-size: 20px !important;
     text-align: center !important
 }
-.logoDiv{
-    height: 300px
+#submitMessageBtn{
+    background: #4ec4f8;
+    border: white 1px solid;
+    color: white;
 }
-.Logo{
-    font-family: 'Righteous', cursive;
-    color: #2b292a;
-    -webkit-text-stroke: 2px #4ec4f8;
-    margin: 0px auto;
+#submitMessageBtn:hover{
+    background: #ffffff;
+    border: #4ec4f8 1px solid;
+    color: #4ec4f8;
 }
-.Logo:hover{
-    color: #4ec4f8 !important;
-    -webkit-text-stroke: 3px #2b292a;
-}
-.pageContainer{
-    position: relative;
-    height: 100%;
-}
+
+
+
+/* === OUR CONTACT INFO === */
 #ourContact{
     background: gray;
     width: fit-content;
@@ -97,8 +106,12 @@ font-family: 'Alegreya Sans', cursive;
 letter-spacing: 1px
 }
 .ourInfo:hover{
-    color: #4ec4f8 !important;
+    color: #4ec4f8;
 }
+
+
+
+/* === EXTRAS SECTION === */
 .extrasBox{
     background: gray;
     width: fit-content;
@@ -125,6 +138,10 @@ letter-spacing: 1px
     width: 70%;
     border-radius: 50%;
 }
+
+
+
+/* === RETURN HOME === */
 .returnHomeBox{
     margin: -20px auto 20px auto;
 }
@@ -139,7 +156,9 @@ letter-spacing: 1px
 
 }
 
-/* Style all font awesome icons */
+
+
+/* === FONT ICONS === */
 .fa {
     padding: 10px;
     font-size: 30px !important;
@@ -148,44 +167,29 @@ letter-spacing: 1px
     text-decoration: none;
     border-radius: 50%;
     margin: auto 10px
-  }
-  /* Facebook */
+}
 .fa-facebook {
     background: #3B5998;
     color: white;
-  }
-  
-  /* Twitter */
-  .fa-twitter {
+}
+.fa-twitter {
     background: #55ACEE;
     color: white;
-  }
-  
-  /* Add a hover effect if you want */
-  .fa:hover {
+}
+.fa:hover {
     opacity: 0.7;
-  }
-
-
-
-  .hidden{
-      display: none
-  }
-
-/* ============ FOOTER ============== */
-#footer{
-    position:fixed;bottom:0;left:0;width:100%;
 }
-.footText{
-    font-family: 'Alegreya Sans', sans-serif;
+
+
+
+/* === HIDDEN === */
+.hidden{
+    display: none
 }
+
 
 
 /* ============= MEDIA QUERIES ============== */
-
-/* ====== smaller than 570px (iPhone5) ====== */
-@media only screen and (max-width: 570px) {
-}
 /* ========== larger than 800px ============= */
 @media only screen and (min-width: 800px) {
     #contactBox{
