--- a/assets/css/repostIssue.css
+++ b/assets/css/repostIssue.css
@@ -1,5 +1,5 @@
 .bg {
-    background: url("../images/static/contact.jpg");
+    background: url("../images/static/reportIssue.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,19 +29,19 @@ main {
 }
 .Logo{
     font-family: 'Righteous', cursive;
-    color: #2b292a;
-    -webkit-text-stroke: 2px #4ec4f8;
+    color: #bccfd9;
+    -webkit-text-stroke: 3px #181212;
     margin: 0px auto;
 }
 .Logo:hover{
-    color: #4ec4f8 !important;
-    -webkit-text-stroke: 3px #2b292a;
+    color: #181212 !important;
+    -webkit-text-stroke: 3px #ee6036;
 }
 
 
 
 /* === CONTACT FORMS === */
-#contactBox{
+#issueBox{
     width: 90%;
     text-align: center;
     background: gray;
@@ -50,13 +50,13 @@ main {
     margin: auto auto 50px auto;
     padding: 10px
 }
-#contactHeader{
+#issueHeader{
     margin: 20px auto 0px auto;
-    color: #4ec4f8;
+    color: #bfd1db;
     font-family: 'Merienda', cursive;
 }
 .prefix{
-    color: #4ec4f8;
+    color: #bccfd9;
 }
 .prefix:hover{
     color: white;
@@ -73,40 +73,28 @@ label{
     font-size: 20px !important;
     text-align: center !important
 }
-#submitMessageBtn{
-    background: #4ec4f8;
+.uploadScreenshotText{
+    color: white;
+    font-family: 'Merienda', cursive;
+}
+#uploadScreenshotBtn{
+    background: #bccfd9;
+    border: white 1px solid;
+}
+#uploadScreenshotBtn:hover{
+    background: #ffffff;
+    border: #ee6036 1px solid;
+    color: #ee6036;
+}
+#submitIssueBtn{
+    background: #bfd1db;
     border: white 1px solid;
     color: white;
 }
-#submitMessageBtn:hover{
+#submitIssueBtn:hover{
     background: #ffffff;
-    border: #4ec4f8 1px solid;
-    color: #4ec4f8;
-}
-
-
-
-/* === OUR CONTACT INFO === */
-#ourContact{
-    background: gray;
-    width: fit-content;
-    padding: 15px;
-    border: white 1px solid;
-    border-radius: 25px;
-    text-align: center;
-    margin: auto auto 50px auto;
-    color: white
-}
-#ourContactText{
-    color: #4ec4f8;
-    font-family: 'Merienda', cursive;
-}
-.ourInfo{
-font-family: 'Alegreya Sans', cursive;
-letter-spacing: 1px
-}
-.ourInfo:hover{
-    color: #4ec4f8;
+    border: #ee6036 1px solid;
+    color: #ee6036;
 }
 
 
@@ -124,15 +112,16 @@ letter-spacing: 1px
 }
 .extrasIco{
     font-size: 40px !important;
-    background: white;
-    border: #4ec4f8 1px solid;
+    background: #ee6036;
+    border: #bccfd9 1px solid;
     border-radius: 25px;
     padding: 5px;
+    color: #bccfd9
 }
 .extrasIco:hover{
-    background: #4ec4f8;
-    border: white 1px solid;
-    color: white;
+    background: #bccfd9;
+    border: #ee6036 1px solid;
+    color: #ee6036;
 }
 .loadingGif{
     width: 70%;
@@ -148,36 +137,12 @@ letter-spacing: 1px
 .returnHome{
     font-family: 'Merienda', cursive;
     padding: 0px 10px;
-    color: #4ec4f8;
+    color: #bccfd9;
 }
 .returnHomeIco{
     margin: 0px 10px;
     font-size: 30px !important;
 
-}
-
-
-
-/* === FONT ICONS === */
-.fa {
-    padding: 10px;
-    font-size: 30px !important;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-    margin: auto 10px
-}
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-}
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
-}
-.fa:hover {
-    opacity: 0.7;
 }
 
 
