--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -72,6 +72,7 @@ body {
 .placeOrderText{
     color: #e5973b;
     font-family: 'Merienda', cursive;
+    margin: 10px auto
 }
 
 
@@ -81,7 +82,7 @@ body {
     background: gray;
     border: #e5973b 2px solid;
     border-radius: 25px;
-    padding: 10px;
+    padding: 15px;
     opacity: 0.9;
     margin: auto
 }
