--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -9,6 +9,7 @@
     background-attachment: fixed;
     display: flex;
     min-height: 100vh;
+    width: 100%;
     flex-direction: column;
     padding: 0px auto 50px auto
 }
