social media linked

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -172,11 +172,11 @@ letter-spacing: 1px
     border-radius: 50%;
     margin: auto 10px
 }
-.fa-instagram {
+.fa-facebook {
     background: #3B5998;
     color: white;
 }
-.fa-twitter {
+.fa-instagram {
     background: #55ACEE;
     color: white;
 }
