--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="pageContainer">
     <div class="parallax-container valign-wrapper center-align">
-        <h1 class="Logo">GRAFIK ROBOTO</h1>
+        <h1 id="LogoIndex">GRAFIK ROBOTO</h1>
         <div class="parallax"><img class="parallaxImg" src="/images/static/top_parallax.jpg"></div>
     </div>
 
