--- a/views/reportIssue.handlebars
+++ b/views/reportIssue.handlebars
@@ -2,7 +2,7 @@
     <div class="pageContainer">
         <header>
             <div class="logoDiv valign-wrapper">
-                <h1 class="Logo center-align">GRAFIK ROBOTO</h1>
+                <h1 class="center-align" id="LogoIssue">GRAFIK ROBOTO</h1>
             </div>
         </header>
         <main>
