--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -31,13 +31,13 @@ main {
 .logoDiv{
     height: 300px
 }
-.Logo{
+#LogoContact{
     font-family: 'Righteous', cursive;
     color: #2b292a;
     -webkit-text-stroke: 2px #4ec4f8;
     margin: 0px auto;
 }
-.Logo:hover{
+#LogoContact:hover{
     color: #4ec4f8 !important;
     -webkit-text-stroke: 3px #2b292a;
 }
