--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -50,8 +50,7 @@
             <div class="extrasBox hidden" id="thanksDiv">
                 <h4 class="extrasItems cyan-text">Thanks!</h4>
                 <h5 class="extrasItems">Your message has been sent.</h5>
-                <h5 class="extrasItems">Return Home </h5><a href="/index"><i
-                        class="material-icons extrasIco">home</i></a>
+                <h5 class="extrasItems">Return Home </h5><a href="/"><i class="material-icons extrasIco">home</i></a>
             </div>
             <div class="extrasBox hidden" id="errorDiv">
                 <h4 class="extrasItems cyan-text">Something went wrong!</h4>
@@ -59,7 +58,7 @@
                 </h5>
                 <div class="row">
                     <div class="col s6">
-                        <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="/index"><i
+                        <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="/"><i
                                 class="material-icons extrasIco">home</i></a>
                     </div>
                     <div class="col s6">
@@ -69,7 +68,7 @@
                 </div>
             </div>
             <div class="extrasBox returnHomeBox">
-                <a href="./index.html">
+                <a href="./.html">
                     <h5 class="extrasItems returnHome valign-wrapper">
                         Return Home<i class="material-icons extrasIco returnHomeIco">home</i>
                     </h5>
