--- a/views/reportIssue.handlebars
+++ b/views/reportIssue.handlebars
@@ -62,17 +62,17 @@
     <div class="extrasBox hidden" id="thanksDiv">
         <h4 class="extrasItems cyan-text">Thanks!</h4>
         <h5 class="extrasItems">Your message has been sent.</h5>
-        <h5 class="extrasItems">Return Home </h5><a href="/index"><i class="material-icons extrasIco">home</i></a>
+        <h5 class="extrasItems">Return Home </h5><a href="/"><i class="material-icons extrasIco">home</i></a>
     </div>
     <div class="extrasBox hidden" id="errorDiv">
         <h4 class="extrasItems cyan-text">Something went wrong!</h4>
         <h5 class="extrasItems">Your message did not go through, please try again later.
         </h5>
-        <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="/index"><i
+        <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="/"><i
                 class="material-icons extrasIco">home</i></a>
     </div>
     <div class="extrasBox returnHomeBox">
-        <a href="/index">
+        <a href="/">
             <h5 class="extrasItems returnHome valign-wrapper">
                 Return Home<i class="material-icons extrasIco returnHomeIco">home</i>
             </h5>
