--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -178,6 +178,19 @@ input{
 }
 
 
+.cartItemInfoHead{
+    font-family: 'Merienda', cursive;
+    color: #d48d37;
+    font-size: 20px;
+    line-height: 30px;
+}
+.cartList{
+    background: #2b292a;
+    border: 1px black solid;
+    border-radius: 25px;
+    padding: 10px;
+    margin: 10px auto
+}
 
 /* ============= MEDIA QUERIES ============== */
 
