add and delete items to cart logic implemented

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -277,9 +277,9 @@
                                     <div class="input-field col s12 l6">
                                         <select id="houseSizeSelect">
                                             <option value="" disabled selected>Choose your size</option>
-                                            <option data-value="2x7" value="5.00">2in x 7in</option>
-                                            <option data-value="3x8" value="5.00">3in x 8in</option>
-                                            <option data-value="4x9" value="5.00">4in x 9in</option>
+                                            <option value="2x7-5.00">2in x 7in</option>
+                                            <option value="3x8-5.00">3in x 8in</option>
+                                            <option value="4x9-5.00">4in x 9in</option>
                                             <option value="other">Custom (Price inquiry w/ owner)</option>
                                         </select>
                                         <label class="inputLabel">Select Size</label>
