--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -191,6 +191,9 @@ input{
     padding: 10px;
     margin: 10px auto
 }
+.cartItemHead{
+    margin: 5px auto
+}
 
 /* ============= MEDIA QUERIES ============== */
 
