--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -105,7 +105,7 @@
                             </div>
                             <div class="row">
                                 <a class="col s12 waves-effect waves-light btn" id="submitStandardBtn">
-                                    <i class="material-icons left">add_circle_outline</i>SUBMIT ORDER</a>
+                                    <i class="material-icons left">add_shopping_cart</i>SUBMIT ORDER</a>
                             </div>
                     </span>
                 </div>
@@ -229,7 +229,7 @@
                             </div>
                             <div class="row">
                                 <a class="col s12 waves-effect waves-light btn" id="submitPremiumBtn">
-                                    <i class="material-icons left">add_circle_outline</i>SUBMIT ORDER</a>
+                                    <i class="material-icons left">add_shopping_cart</i>SUBMIT ORDER</a>
                             </div>
                     </span>
                 </div>
@@ -325,23 +325,30 @@
                             </div>
                             <div class="row">
                                 <a class="col s12 waves-effect waves-light btn" id="submitHouseBtn">
-                                    <i class="material-icons left">add_circle_outline</i>SUBMIT ORDER</a>
+                                    <i class="material-icons left">add_shopping_cart</i>SUBMIT ORDER</a>
                             </div>
                     </span></div>
             </li>
             <li>
                 <div class="collapsible-header" id="orangeCollapsible"><i
-                        class="material-icons collapseHeadText placeOrderCollapsible">add_circle_outline</i>
+                        class="material-icons collapseHeadText placeOrderCollapsible">shopping_cart</i>
                     <div class="collapseHeadText placeOrderCollapsible">Cart</div>
                 </div>
                 <div class="collapsible-body"><span>
                         <h1 class="center-align placeOrderText">Cart</h1>
                         <div class="placeOrderContainer center-align">
-                            <h3>Items</h3>
-
-                            <hr width="50%">
                             <div class="cartDiv">
+                            </div>
+                            <div class="noItemsInCart">
                                 <h4>No items currently in cart...</h4>
+                            </div>
+                            <div class="checkoutButtonDiv hidden row">
+                                <div class="col s12 l6 totalDiv">Total<div id="totalDiv"></div>
+                                </div>
+                                <div class="col s12 l6">
+                                    <a class="waves-effect waves-light btn" id="checkoutBtn">
+                                        <i class="material-icons left">shopping_cart</i>Checkout</a>
+                                </div>
                             </div>
                             <div class="orderUserInfo hidden">
                                 <div class="row">
