--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -93,9 +93,9 @@
                             <div class="row">
                                 <form action="#">
                                     <div class="file-field input-field">
-                                        <div class="btn">
+                                        <div class="btn linkImgBtns">
                                             <span>File</span>
-                                            <input type="file" id="standardLinkImage">
+                                            <input class="linkImgBtns" type="file" id="standardLinkImage">
                                         </div>
                                         <div class="file-path-wrapper">
                                             <input class="file-path validate" type="text">
@@ -104,8 +104,8 @@
                                 </form>
                             </div>
                             <div class="row">
-                                <a class="col s12 waves-effect waves-light btn" id="submitStandardBtn">
-                                    <i class="material-icons left">add_shopping_cart</i>SUBMIT ORDER</a>
+                                <a class="col s12 waves-effect waves-light btn addToCart" id="submitStandardBtn">
+                                    <i class="material-icons left">add_shopping_cart</i>Add to cart</a>
                             </div>
                     </span>
                 </div>
@@ -217,9 +217,9 @@
                             <div class="row">
                                 <form action="#">
                                     <div class="file-field input-field">
-                                        <div class="btn">
+                                        <div class="btn linkImgBtns">
                                             <span>File</span>
-                                            <input type="file" id="premiumLinkImage">
+                                            <input type="file" class="linkImgBtns" id="premiumLinkImage">
                                         </div>
                                         <div class="file-path-wrapper">
                                             <input class="file-path validate" type="text">
@@ -228,7 +228,7 @@
                                 </form>
                             </div>
                             <div class="row">
-                                <a class="col s12 waves-effect waves-light btn" id="submitPremiumBtn">
+                                <a class="col s12 waves-effect waves-light btn addToCart" id="submitPremiumBtn">
                                     <i class="material-icons left">add_shopping_cart</i>SUBMIT ORDER</a>
                             </div>
                     </span>
@@ -302,30 +302,9 @@
                                     <label class="inputLabel center-align">Select Quantity</label>
                                 </div>
                             </div>
-
-                            <!-- === UPLOAD DESIGN === -->
-                            <h4 class="uploadImgText center-align">Link
-                                your design</h4>
-                            <h6 class="center-align" id="uploadDirections">Image file
-                                specifications will
-                                go here</h6>
-                            <hr width="40%">
                             <div class="row">
-                                <form action="#">
-                                    <div class="file-field input-field">
-                                        <div class="btn">
-                                            <span>File</span>
-                                            <input type="file" id="houseLinkImage">
-                                        </div>
-                                        <div class="file-path-wrapper">
-                                            <input class="file-path validate" type="text">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="row">
-                                <a class="col s12 waves-effect waves-light btn" id="submitHouseBtn">
-                                    <i class="material-icons left">add_shopping_cart</i>SUBMIT ORDER</a>
+                                <a class="col s12 waves-effect waves-light btn addToCart" id="submitHouseBtn">
+                                    <i class="material-icons left">add_shopping_cart</i>Add to cart</a>
                             </div>
                     </span></div>
             </li>
@@ -343,9 +322,11 @@
                                 <h4>No items currently in cart...</h4>
                             </div>
                             <div class="checkoutButtonDiv hidden row">
-                                <div class="col s12 l6 totalDiv">Total<div id="totalDiv"></div>
+                                <div class="totalDiv">
+                                    <div class="col s12 l2 offset-l5">Total = </div>
+                                    <div class="col s12 l2" id="total"></div>
                                 </div>
-                                <div class="col s12 l6">
+                                <div class="col s12 l3">
                                     <a class="waves-effect waves-light btn" id="checkoutBtn">
                                         <i class="material-icons left">shopping_cart</i>Checkout</a>
                                 </div>
