--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <!-- Import Google Fonts-->
-    <link
-        href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Playball|Vibes|Cinzel|Merienda|Righteous&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Playball|Cinzel|Merienda|Righteous&display=swap"
         rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
